# Analisador-de-Protocolos-de-Comunica-o-Embarcados

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Projeto_Analise.c  Projeto_Analise.dis  Projeto_Analise.elf  Projeto_Analise.elf.map  Projeto_Analise.hex  Projeto_Analise.uf2  README.md  blink.pio  blink.pio.h  bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S  build.ninja  cmake_install.cmake  compile_commands.json  settings.json  uart_rx.pio
